@@ -19,6 +19,7 @@
 - Fix: [#21318] Virtual Floor for building scenery is not properly invalidated.
 - Fix: [#21330] Tooltips from dropdown widgets have the wrong position.
 - Fix: [#21332] Mini Helicopters and Monorail Cycles ride types are swapped in research within RCT1 scenarios.
+- Fix: [#21343] “Pause” and “Build Path” hotkeys do not work if top toolbar is hidden.
 - Fix: [#21347] Too many options are hidden if the platform has no file picker.
 - Fix: [#21425] Additional missing/misplaced land & construction rights tiles in Japanese Coastal Reclaim.
 - Fix: [OpenSFX#18] B&M Roar sound effect not looping correctly.
